--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
    
 </body>
 <script src="./student.js"></script>
+<script src ="rectangle.js"></script>
 <script src="./main.js"></script>
 </html>
