--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <script src="./student.js"></script>
 <script src="./teacher.js"></script>
 <script src="./studentTutor.js"></script>
+<script src="./principal.js"></script>
 <script src ="./rectangle.js"></script>
 <script src="./main.js"></script>
 </html>
